// this file provides link quality information
syntax = "proto3";

import "google/protobuf/timestamp.proto";

package metrics;

message LinkQualityParameters {
    // @inject_tag: labelnames:"peer_name,link_name" help:"Jitter in milliseconds for a specific type of service"
    double jitterMilliseconds = 1;
    // @inject_tag: help:"Total packet loss for a specific type of service"
    double packetLossRate = 2;
    // @inject_tag: help:"Roundtrip time in milliseconds for a specific type of service"
    double roundtripTimeMilliseconds = 3;
}

message PerLinkQuality {
    // @inject_tag: label:"link_name=?" help:"link information for each vti connection."
    string link_name = 1;
    // @inject_tag: help:"detailed link quality parameters for each vti connection."
    LinkQualityParameters quality_parameters = 2;
    // @inject_tag: help:"this fields that indicated vti connection failure."
    bool failure = 3;
}

message PeerLinkQuality {
    // @inject_tag: label:"peer_name=?" help:"all the information for the links of each site."
    string peer_name = 1;
    // @inject_tag: help:"link quality for each vti connection for this site."
    repeated PerLinkQuality per_link_quality = 2;
}

message LinkQuality {
    string device_sn = 3;
    google.protobuf.Timestamp timestamp = 4;

    repeated PeerLinkQuality peer = 5;
}

//
// /* Say the message sent by site with name '00025', and under the condition:
//  *   1. site with name '00025' is the hub and there are 2 site connected to it: site 00024 and site 00025,
//  *   2. there are 3 WANs at the site 00024, 2 WANs at the site 00025, and 2 WANs at the site 00023,
//  *   3. WAN2 of 00024 is link failure.
//  *
//  * Here is the example data for this protobuf message: */
//
// { "deviceSn":"ZYXEL001", "timestamp":{},
//   "peer":[
//      { "peerName": "00024",
//        "perLinkQuality": [
//          {"linkName":"vti00025WAN1-00024WAN1", 
//           "qualityParameters":{"jitterMilliseconds":0.3, "packetLossRate":0.01, "roundtripTimeMilliseconds":3.0}},
//          {"linkName":"vti00025WAN1-00024WAN2", "failure": true},
//          {"linkName":"vti00025WAN1-00024WAN3", 
//            "qualityParameters":{"jitterMilliseconds":5.0, "packetLossRate":0.0, "roundtripTimeMilliseconds":20.0}},
//          {"linkName":"vti00025WAN2-00024WAN1", 
//            "qualityParameters":{"jitterMilliseconds":0.2, "packetLossRate":0.02, "roundtripTimeMilliseconds":5.0}},
//          {"linkName":"vti00025WAN2-00024WAN2", "failure': true},
//          {"linkName":"vti00025WAN2-00024WAN3", 
//           "qualityParameters":{"jitterMilliseconds":5.2, "packetLossRate":0.0, "roundtripTimeMilliseconds":20.0}}
//        ]
//      },
//      { "peerName": "00023",
//        "perLinkQuality": [
//          {"linkName":"vti00025WAN1-00023WAN1", 
//           "qualityParameters":{"jitterMilliseconds":0.5, "packetLossRate":0.0, "roundtripTimeMilliseconds":3.0}},
//          {"linkName":"vti00025WAN1-00023WAN2", 
//           "qualityParameters":{"jitterMilliseconds":1.2, "packetLossRate":0.0, "roundtripTimeMilliseconds":5.0}},
//          {"linkName":"vti00025WAN2-00023WAN1",
//           "qualityParameters":{"jitterMilliseconds":0.7, "packetLossRate":0.0, "roundtripTimeMilliseconds":2.7}},
//          {"linkName":"vti00025WAN2-00023WAN2",
//           "qualityParameters":{"jitterMilliseconds":1.0, "packetLossRate":0.0, "roundtripTimeMilliseconds":3.0}}
//        ]
//      }
//   ]
// }
//
