syntax="proto3";

import "google/protobuf/timestamp.proto";

package metrics;

message CPUMetrics {
	uint32 utilization = 1;
	uint32 utilization1min = 2;
	uint32 utilization5min = 3;
};

message CPUCore {
	uint32 index = 1;
	CPUMetrics metrics = 2;
};

message CPULoad {
	repeated CPUCore core = 1;
}

message MemoryMetrics {
	uint64 total_memory = 1;
	uint64 free_memory = 2;
};

message NetworkMetrics {
	uint32 sessions = 1;
}

message SystemLoad {
	string device_sn = 1;
	google.protobuf.Timestamp timestamp = 2;
	CPULoad cpu = 3;
	MemoryMetrics memory = 4;
	NetworkMetrics network = 5;
};
